*** Pico Changelog ***

2013.08.28 - version 0.6.3
 * [New] Added any meta tag support
 * [New] Added layout meta tag to support custom templates for each page
 * [New] Ignore Emacs and Nano tmp files like: "~", "#"; in content folder
 * [New] Ignore hidden files in content folder
 * [Fixed] - empty title/date headers

2013.05.07 - version 0.6.2
 * [Changed] Replaced glob_recursive with get_files

2013.05.07 - version 0.6.1
 * [New] Added "content" and "excerpt" fields to pages
 * [New] Added excerpt_length config setting

2013.05.06 - version 0.6
 * [New] Added plugin functionality
 * [Changed] Other small cleanup

2013.05.03 - version 0.5
 * [New] Added ability to order pages by "alpha" or "date" (asc or desc)
 * [New] Added prev_page, current_page, next_page and is_front_page template vars
 * [New] Added "Author" and "Date" title meta fields
 * [Changed] Added "twig_config" to settings
 * [Changed] Updated documentation
 * [Fixed] Query string 404 bug

2013.05.01 - version 0.4.1
 * [New] Added CONTENT_EXT global
 * [Changed] Use .md files instead of .txt

2013.05.01 - version 0.4
 * [New] Add get_pages() function for listing content
 * [New] Added changelog.txt
 * [Changed] Updated default theme
 * [Changed] Updated documentation

2013.04.27 - version 0.3
 * [Fixed] get_config() function

2013.04.26 - version 0.2
 * [Changed] Updated Twig
 * [Changed] Better checking for HTTPS
 * [Fixed] Add 404 header to 404 page
 * [Fixed] Case sensitive folder bug

2012.04.04 - version 0.1
 * Initial release